# rd_homework6

./: .gitignore  docker-compose.yaml  pyproject.toml  readme.MD
alembic/: env.py
alembic/versions/: 1c4b2d458853_initial_migration.py  3abdf42e2b9e_initial_migration.py
app/: __main__.py  database.py  models.py  utils.py
